[gd_scene load_steps=13 format=3 uid="uid://bbniwcw1ot0ps"]

[ext_resource type="Script" uid="uid://bmfomslo6ej1y" path="res://cyberooster.gd" id="1_8x83q"]
[ext_resource type="PackedScene" uid="uid://bp0f3h2k4ihdt" path="res://player/player.tscn" id="1_tx5xb"]
[ext_resource type="Texture2D" uid="uid://dj3b2bamv2br1" path="res://other/bkg_grid.png" id="2_kmddx"]
[ext_resource type="Shader" uid="uid://bbhlwjs20eefw" path="res://bkg.gdshader" id="2_oxwii"]
[ext_resource type="FontFile" uid="uid://dtwvr2q5thwe1" path="res://other/KenneyFonts/Kenney Mini Square.ttf" id="3_kmddx"]
[ext_resource type="PackedScene" uid="uid://pxvdt4retwqp" path="res://util/leveling_system/level_up_screen.tscn" id="6_ohav6"]
[ext_resource type="Environment" uid="uid://bn5g7mc523iuw" path="res://util/glow.tres" id="6_pfh8x"]
[ext_resource type="PackedScene" uid="uid://breilajifpmk6" path="res://characters/mobs/virus_1B.tscn" id="8_sq21o"]
[ext_resource type="PackedScene" uid="uid://daah82qa4ktve" path="res://characters/mobs/virus_1C.tscn" id="9_46xs7"]
[ext_resource type="PackedScene" uid="uid://c4c7aypts1s30" path="res://characters/mobs/virus_1D.tscn" id="10_os4vh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pfh8x"]
shader = ExtResource("2_oxwii")

[sub_resource type="Curve2D" id="Curve2D_lg8w0"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -56, -36, 0, 0, 0, 0, 117.42077, -34.32325, 0, 0, 0, 0, 677, -37, 0, 0, 0, 0, 680, 361, 0, 0, 0, 0, -54, 362, 0, 0, 0, 0, -56, -36)
}
point_count = 6

[node name="Game" type="Node2D"]
script = ExtResource("1_8x83q")

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Background"]
visible = false
material = SubResource("ShaderMaterial_pfh8x")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kmddx")
stretch_mode = 1

[node name="PlayerInfo" type="CanvasLayer" parent="."]

[node name="PlayerXP" type="Label" parent="PlayerInfo"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -84.0
offset_right = -10.0
offset_bottom = 43.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.33333334, 1, 0.33333334, 1)
theme_override_fonts/font = ExtResource("3_kmddx")
text = "print(XP)
  > 0"

[node name="CurrentStage" type="Label" parent="PlayerInfo"]
unique_name_in_owner = true
offset_left = 9.0
offset_right = 115.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0.33333334, 1, 0.33333334, 1)
theme_override_fonts/font = ExtResource("3_kmddx")
text = "print(stage) 
  > 0"

[node name="ElapsedTime" type="Label" parent="PlayerInfo"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.33333334, 1, 0.33333334, 1)
theme_override_fonts/font = ExtResource("3_kmddx")

[node name="LevelUp" type="CanvasLayer" parent="."]
follow_viewport_scale = 1.17

[node name="Player" parent="." instance=ExtResource("1_tx5xb")]
unique_name_in_owner = true
position = Vector2(320, 160)

[node name="LevelUpScreen" parent="Player" instance=ExtResource("6_ohav6")]
unique_name_in_owner = true
visible = false
z_index = 2

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-309, -162)
curve = SubResource("Curve2D_lg8w0")

[node name="SpawnPath" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-56, -36)
rotation = 0.00966838

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="SpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.7
autostart = true

[node name="SpawnIncrement" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[node name="ElapsedTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="GlobalGlow" type="WorldEnvironment" parent="."]
environment = ExtResource("6_pfh8x")

[node name="virus_1B" parent="." instance=ExtResource("8_sq21o")]
position = Vector2(161, 217)

[node name="virus_1C" parent="." instance=ExtResource("9_46xs7")]
position = Vector2(296, 260)

[node name="virus_1D" parent="." instance=ExtResource("10_os4vh")]
position = Vector2(450, 236)

[connection signal="level_up" from="Player" to="Player/LevelUpScreen" method="_on_player_level_up"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="SpawnIncrement" to="." method="_on_spawn_increment_timeout"]
[connection signal="timeout" from="ElapsedTimer" to="." method="_on_elapsed_timer_timeout"]
